--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,9 @@ spring.servlet.multipart.max-file-size=5MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=5MB
 
-aws.accesskey=__UPDATE_ME__
-aws.secretekey=__UPDATE_ME__
+aws.accessKey=AKIAJT6YKZPZLSJ3L7VQ
+aws.secretKey=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
+
+es.hostName=980f51ae.ngrok.io
+es.hostPort=80
+es.indexName=products
