--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.servlet.multipart.max-file-size=5MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=5MB
 
-aws.accessKey=AKIAJT6YKZPZLSJ3L7VQ
-aws.secretKey=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
+aws.accessKey=__UPDATEME__
+aws.secretKey=__UPDATEME__
 
 es.hostName=980f51ae.ngrok.io
 es.hostPort=80
