reading rekognition setting externally

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.servlet.multipart.max-file-size=5MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=5MB
 
-aws.accessKey=__UPDATEME__
-aws.secretKey=__UPDATEME__
+aws.accessKey=__UPDATE_ME__
+aws.secretKey=__UPDATE_ME__
+aws.rekognition.minConfidence=60
+aws.rekognition.maxLabels=5
 
-es.hostName=980f51ae.ngrok.io
+es.hostName=cb44c1f2.ngrok.io
 es.hostPort=80
 es.indexName=products
